--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@
     </header>
 
     <!-- jumbotron -->
+    <section id="jumbotron">
+        <div  class="container container-lg">
+            <div class="row pb-4">
+                <div class="col-12 col-lg-4">
+                    <img src="img/returnal-hero-banner-logo.png">
+                </div>
+            </div>
+            <div class="row pb-4">
+                <div class="col-12 col-lg-4">
+                    <h2>Rompi il cerchio</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae doloribus laudantium vitae obcaecati ipsa error eum nemo facere, suscipit beatae tempore repellat expedita et saepe quaerat nulla voluptatum consectetur assumenda?</p>
+                    <a href="#">
+                        <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- section presentation -->
