jumbotron modificato - aggiunti items responsive sotto

--- a/index.html
+++ b/index.html
@@ -118,19 +118,44 @@
 
     <!-- jumbotron -->
     <section id="jumbotron">
-        <div  class="container container-lg">
-            <div class="row pb-4">
-                <div class="col-12 col-lg-4">
-                    <img src="img/returnal-hero-banner-logo.png">
+        <div id="jumbo-bg">
+            <div  class="container container-lg">
+                <div class="row pb-4">
+                    <div class="col-12 col-lg-4">
+                        <img src="img/returnal-hero-banner-logo.png" id="ms_jumbo-banner">
+                    </div>
+                </div>
+                <div class="row pb-4">
+                    <div class="col-12 col-lg-4">
+                        <h2>Rompi il cerchio</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae doloribus laudantium vitae obcaecati ipsa error eum nemo facere, suscipit beatae tempore repellat expedita et saepe quaerat nulla voluptatum consectetur assumenda?</p>
+                        <a href="#">
+                            <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="row pb-4">
-                <div class="col-12 col-lg-4">
-                    <h2>Rompi il cerchio</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae doloribus laudantium vitae obcaecati ipsa error eum nemo facere, suscipit beatae tempore repellat expedita et saepe quaerat nulla voluptatum consectetur assumenda?</p>
-                    <a href="#">
-                        <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
-                    </a>
+        </div>
+
+        <div class="container container-lg">
+            <div class="row g-2 pt-4 pb-4">
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
             </div>
         </div>
