intestazione sezione presentation

--- a/index.html
+++ b/index.html
@@ -163,7 +163,17 @@
 
 
     <!-- section presentation -->
-
+    <section id="presentation">
+        <div class="container container-lg">
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h6>PLAY HAS NO LIMITS</h6>
+                    <h2>Ecco la PlayStation 5</h2>
+                    <h5>Tuffati in nuove possibilità di gioco completamente inaspettate</h5>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- section adventure - simile a jumbotron -->
 
