--- a/index.html
+++ b/index.html
@@ -172,7 +172,34 @@
                     <h5>Tuffati in nuove possibilità di gioco completamente inaspettate</h5>
                 </div>
             </div>
-        </div>
+            <div class="row mt-5 align-items-center">
+                <div class="col-12 col-md-6">
+                    <h2>Console PlayStation 5</h2>
+                    <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Maggiori Informazioni</button></a>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="img/playstation-5-thumb.png"  alt="PlayStation5">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-4 col-md-2">
+                    <img src="img/playstation-5-thumb.png" alt="PlayStation5">
+                </div>
+                <div class="col-4 col-md-2">
+                    <img src="img/joypad-thumb.png" alt="joypad">
+                </div>
+                <div class="col-4 col-md-2">
+                    <img src="img/headset-thumb.png" alt="headset">
+                </div>
+                <div class="col-4 col-md-2">
+                    <img src="img/remote-thumb.png" alt="remote">
+                </div>
+                <div class="col-4 col-md-2">
+                    <img src="img/camera-thumb.jpg" alt="camera">
+                </div>
+            </div>
+        <div>
     </section>
 
     <!-- section adventure - simile a jumbotron -->
