--- a/index.html
+++ b/index.html
@@ -182,21 +182,26 @@
                     <img src="img/playstation-5-thumb.png"  alt="PlayStation5">
                 </div>
             </div>
-            <div class="row mt-5">
-                <div class="col-4 col-md-2">
+            <div class="row mt-5 mb-5 row-cols-3 row-cols-md-5 text-center">
+                <div class="col">
                     <img src="img/playstation-5-thumb.png" alt="PlayStation5">
+                    <h5 class="d-none d-md-block">Console PS5</h5>
                 </div>
-                <div class="col-4 col-md-2">
+                <div class="col">
                     <img src="img/joypad-thumb.png" alt="joypad">
+                    <h5 class="d-none d-md-block">Controller wireless DualSense&trade;</h5>
                 </div>
-                <div class="col-4 col-md-2">
+                <div class="col">
                     <img src="img/headset-thumb.png" alt="headset">
+                    <h5 class="d-none d-md-block">Cuffie wireless con microfono PULSE&trade;</h5>
                 </div>
-                <div class="col-4 col-md-2">
+                <div class="col">
                     <img src="img/remote-thumb.png" alt="remote">
+                    <h5 class="d-none d-md-block">Telecomando media</h5>
                 </div>
-                <div class="col-4 col-md-2">
+                <div class="col">
                     <img src="img/camera-thumb.jpg" alt="camera">
+                    <h5 class="d-none d-md-block">Telecamera HD</h5>
                 </div>
             </div>
         <div>
