--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="fixed-top">
         <div id="sony">SONY</div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
