--- a/index.html
+++ b/index.html
@@ -120,13 +120,16 @@
     <section id="jumbotron">
         <div id="jumbo-bg">
             <div  class="container container-lg">
-                <div class="row pb-4">
+                <!-- <div class="row align-items-end pb-4">
                     <div class="col-12 col-lg-4">
                         <img src="img/returnal-hero-banner-logo.png" id="ms_jumbo-banner">
                     </div>
-                </div>
-                <div class="row pb-4">
+                </div> -->
+                <div class="row align-items-end pb-4">
                     <div class="col-12 col-lg-4">
+                        <div id="ms_jumbo-banner">
+                            <img src="img/returnal-hero-banner-logo.png" >
+                        </div>
                         <h2>Rompi il cerchio</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae doloribus laudantium vitae obcaecati ipsa error eum nemo facere, suscipit beatae tempore repellat expedita et saepe quaerat nulla voluptatum consectetur assumenda?</p>
                         <a href="#">
