--- a/index.html
+++ b/index.html
@@ -120,14 +120,9 @@
     <section id="jumbotron">
         <div id="jumbo-bg">
             <div  class="container container-lg">
-                <!-- <div class="row align-items-end pb-4">
+                <div class="row align-items-end pb-5">
                     <div class="col-12 col-lg-4">
-                        <img src="img/returnal-hero-banner-logo.png" id="ms_jumbo-banner">
-                    </div>
-                </div> -->
-                <div class="row align-items-end pb-4">
-                    <div class="col-12 col-lg-4">
-                        <div id="ms_jumbo-banner">
+                        <div class="ms_banner">
                             <img src="img/returnal-hero-banner-logo.png" >
                         </div>
                         <h2>Rompi il cerchio</h2>
@@ -211,7 +206,24 @@
     </section>
 
     <!-- section adventure - simile a jumbotron -->
-
+    <section id="adventure">
+        <div id="adv-bg">
+            <div  class="container container-lg">
+                <div class="row align-items-end pb-5">
+                    <div class="col-12 col-lg-4">
+                        <div class="ms_banner">
+                            <img src="img/it-takes-two-logo.png" >
+                        </div>
+                        <h2>Un'Avventura cooperativa selvaggia ti attende</h2>
+                        <p>Trova un amico e partite inseme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforma che stravolge il suo genere.</p>
+                        <a href="#">
+                            <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- section new releases -->
 
