--- a/index.html
+++ b/index.html
@@ -226,6 +226,64 @@
     </section>
 
     <!-- section new releases -->
+    <section id="new-releases">
+        <div class="container container-lg pt-4 pb-4">
+            <h2>Nuove uscite</h2>
+            <h4>Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+            <div class="row">
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
+                    <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg">
+                    <h6>Crash Bandicoot 4: It's About Time</h6>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- section explore similie presentation -->
