sezione explore completa

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
     <!-- section presentation -->
-    <section id="presentation">
+    <section id="presentation" class="ms_sez-white">
         <div class="container container-lg">
             <div class="row mt-5">
                 <div class="col text-center">
@@ -285,9 +285,37 @@
         </div>
     </section>
 
-
     <!-- section explore similie presentation -->
-
+    <section id="explore" class="ms_sez-white">
+        <div class="container container-lg">
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h2>Esplora PlayStation&reg; 4</h2>
+                    <h5>Giochi incredibili ed intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per giocare sulla tua PS4</h5>
+                </div>
+            </div>
+            <div class="row mt-5 align-items-center">
+                <div class="col-12 col-md-4">
+                    <img src="img/ps4-slim-homepage-image-block.jpg" alt="PS4">
+                    <h2>Console PlayStation 5</h2>
+                    <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/double11-202010-tw-psvr.jpg" alt="PS4">
+                    <h2>Console PlayStation 5</h2>
+                    <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/dualshock-4-listing-thumb.jpg" alt="PS4">
+                    <h2>Console PlayStation 5</h2>
+                    <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
+                </div>
+            </div>
+        <div>
+    </section>
 
     <!-- section PS+ -->
 
