sezione ps plus completa

--- a/index.html
+++ b/index.html
@@ -318,7 +318,20 @@
     </section>
 
     <!-- section PS+ -->
-
+    <section id="ps-plus" class="ms_sez-ps">
+        <div class="container container-lg">
+            <div class="row align-items-center">
+                <div class="col col-md-6">
+                    <img src="img/ps-plus-logo.png" alt="ps-logo">
+                    <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora</p>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
+                </div>
+                <div class="col col-md-6 d-none d-md-block">
+                    <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="soulstrom">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- section sales PS Store simile explore e presentation-->
 
