sezione PS now completa

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </section>
 
     <!-- section explore similie presentation -->
-    <section id="explore" class="ms_sez-white">
+    <section id="explore" class="ms_sez-white mb-5">
         <div class="container container-lg">
             <div class="row mt-5">
                 <div class="col text-center">
@@ -324,7 +324,7 @@
                 <div class="col col-md-6">
                     <img src="img/ps-plus-logo.png" alt="ps-logo">
                     <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora</p>
-                    <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-grey">Esplora PlayStation Plus</button></a>
                 </div>
                 <div class="col col-md-6 d-none d-md-block">
                     <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="soulstrom">
@@ -337,7 +337,20 @@
 
 
     <!-- section PS Now simile PS+ -->
-
+    <section id="ps-now" class="ms_sez-ps">
+        <div class="container container-lg">
+            <div class="row align-items-center">
+                <div class="col col-md-6">
+                    <img src="img/ps-now-logo-two-column.png" alt="ps-now">
+                    <p>Ottieni l'accesso immediato ad una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggoiuntivi ogni mese</p>
+                    <a href="#"><button type="button" class="ms_btn ms_btn-light-grey">Esplora PlayStation Now</button></a>
+                </div>
+                <div class="col col-md-6 d-none d-md-block">
+                    <img src="img/ps-now-april-featured-image-block.png" alt="soulstrom">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- section social -->
 
