sezione sales completa

--- a/index.html
+++ b/index.html
@@ -334,7 +334,27 @@
     </section>
 
     <!-- section sales PS Store simile explore e presentation-->
-
+    <section id="sales" class="ms_sez-white mb-5">
+        <div class="container container-lg">
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h2>Nuovi Sconti su PlayStation Store</h2>
+                    <h5>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto. </h5>
+                </div>
+            </div>
+            <div class="row mt-5 align-items-center">
+                <div class="col-12 col-md-4">
+                    <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="PS4">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="PS4">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/playstation-store-free-to-play-spotlight.png" alt="PS4">
+                </div>
+            </div>
+        <div>
+    </section>
 
     <!-- section PS Now simile PS+ -->
     <section id="ps-now" class="ms_sez-ps">
