social section done

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <h5>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto. </h5>
                 </div>
             </div>
-            <div class="row mt-5 align-items-center">
+            <div class="row g-4 mt-5 align-items-center">
                 <div class="col-12 col-md-4">
                     <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="PS4">
                 </div>
@@ -372,8 +372,30 @@
         </div>
     </section>
 
-    <!-- section social -->
-
+    <!-- section social simile a sales -->
+    <section id="social" class="ms_sez-white mb-5">
+        <div class="container container-lg">
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h2>Seguici sui social media</h2>
+                </div>
+            </div>
+            <div class="row g-4 m-2 align-items-center">
+                <div class="col-6 col-sm-3">
+                    <img src="img/twitter.jpg" alt="PS4">
+                </div>
+                <div class="col-6 col-sm-3">
+                    <img src="img/facebook.jpg" alt="PS4">
+                </div>
+                <div class="col-6 col-sm-3">
+                    <img src="img/instagram.jpg" alt="PS4">
+                </div>
+                <div class="col-6 col-sm-3">
+                    <img src="img/youtube.png" alt="PS4">
+                </div>
+            </div>
+        <div>
+    </section>
 
     <!-- footer -->
 
