--- a/index.html
+++ b/index.html
@@ -398,7 +398,53 @@
     </section>
 
     <!-- footer -->
-
+    <footer>
+        <div class="container container-lg">
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-5">
+                    <img src="img/ps-footer.svg">
+                    <img src="img/language-globe.svg"> Country / Region:Italy
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <ul>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul>
+                                <li>link n</li>
+                                <li>link n</li>
+                                <li>link n</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 col-lg-6">
+                    <img src="img/sie-logo.svg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero ipsum mollitia! Officia, temporibus assumenda eius architecto beatae reiciendis magni nihil deleniti molestiae alias impedit nemo, dolore corrupti ad. Rerum. lore</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
