--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <!-- header -->
     <header class="fixed-top">
-        <div id="sony">SONY</div>
+        <div id="sony">
+            <img src="img/sony_logo.svg" alt="logo">
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
