modificato container sezione social

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
     <!-- section social simile a sales -->
     <section id="social" class="ms_sez-white mb-5">
-        <div class="container container-lg">
+        <div class="container ms_container-lg">
             <div class="row mt-5">
                 <div class="col text-center">
                     <h2>Seguici sui social media</h2>
