aggiunti effetti hover ai button, e link vari

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container container-lg">
             <div class="row g-2 pt-4 pb-4">
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <img class="active" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
@@ -183,8 +183,9 @@
                     <img src="img/playstation-5-thumb.png"  alt="PlayStation5">
                 </div>
             </div>
+            
             <div class="row mt-5 mb-5 row-cols-3 row-cols-md-5 text-center">
-                <div class="col">
+                <div class="col select">
                     <img src="img/playstation-5-thumb.png" alt="PlayStation5">
                     <h5 class="d-none d-md-block">Console PS5</h5>
                 </div>
@@ -347,13 +348,13 @@
             </div>
             <div class="row g-4 mt-5 align-items-center">
                 <div class="col-12 col-md-4">
-                    <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="PS4">
+                    <a href="#"><img src="img/playstation-store-games-under-20-spotlight.jpg" alt="PS4"></a>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="PS4">
+                    <a href="#"><img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="PS4"></a>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/playstation-store-free-to-play-spotlight.png" alt="PS4">
+                    <a href="#"><img src="img/playstation-store-free-to-play-spotlight.png" alt="PS4"></a>
                 </div>
             </div>
         <div>
@@ -385,16 +386,16 @@
             </div>
             <div class="row g-4 m-2 align-items-center">
                 <div class="col-6 col-sm-3">
-                    <img src="img/twitter.jpg" alt="PS4">
+                    <a href="#"><img src="img/twitter.jpg" alt="PS4"></a> 
                 </div>
                 <div class="col-6 col-sm-3">
-                    <img src="img/facebook.jpg" alt="PS4">
+                    <a href="#"><img src="img/facebook.jpg" alt="PS4"></a> 
                 </div>
                 <div class="col-6 col-sm-3">
-                    <img src="img/instagram.jpg" alt="PS4">
+                    <a href=""><img src="img/instagram.jpg" alt="PS4"></a>
                 </div>
                 <div class="col-6 col-sm-3">
-                    <img src="img/youtube.png" alt="PS4">
+                    <a href=""><img src="img/youtube.png" alt="PS4"></a>
                 </div>
             </div>
         <div>
@@ -406,35 +407,35 @@
             <div class="row">
                 <div class="col-12 col-lg-6 mb-5">
                     <img src="img/ps-footer.svg">
-                    <img src="img/language-globe.svg"> Country / Region:Italy
+                    <img src="img/language-globe.svg"> <a href="#">Country / Region:Italy</a> 
                 </div>
                 <div class="col-12 col-lg-6 mb-3">
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <ul>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <ul>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <ul>
-                                <li>link n</li>
-                                <li>link n</li>
-                                <li>link n</li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
+                                <li><a href="#">link n</a></li>
                             </ul>
                         </div>
                     </div>
