--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </li>
                 </ul>
               </div>
-              
+
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown">
@@ -444,7 +444,7 @@
             <div class="row mt-3">
                 <div class="col-12 col-lg-6">
                     <img src="img/sie-logo.svg">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero ipsum mollitia! Officia, temporibus assumenda eius architecto beatae reiciendis magni nihil deleniti molestiae alias impedit nemo, dolore corrupti ad. Rerum. lore</p>
+                    <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a></p>
                 </div>
             </div>
         </div>
