dropdown menu a larghezza intera completo con sublink

--- a/index.html
+++ b/index.html
@@ -31,61 +31,120 @@
                         <a class="nav-link dropdown-toggle active" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Giochi
                         </a>
-                        <ul class="dropdown-menu"  >
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          </ul>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Hardware
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" >
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Hardware
+                        </a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Servizi
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" >
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Servizi
+                        </a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Novità
+                        </a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Novità
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Fai Acquisti
+                        </a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Fai Acquisti
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Supporto
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Supporto
+                        </a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                                <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            </ul>
+                            <div class="ms_sub-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                    <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
                     </li>
                 </ul>
               </div>
@@ -96,11 +155,21 @@
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       My PlayStation
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                            <li><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png"></a></li>
+                        </ul>
+                        <div class="ms_sub-menu">
+                            <ul>
+                                <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                                <li><a class="dropdown-item" href="#"><span class="ms_fake-circle-fill"></span> sub link</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">
