modifiche menu resposive terminate

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <button type="button" class="ms_btn ms_btn-dark">Accedi</button>
+                        <button type="button" id="accedi" class="ms_btn ms_btn-dark">Accedi</button>
                     </a>
                   </li>
                   <li class="nav-item">
